<resources>
    <string name="app_name">Borkozic</string>
    <string name="app_sharing_name">Borkozic Location Share</string>
    <string name="managetracks_name">Tracks</string>
    <string name="trackproperties_name">Edit track</string>
    <string name="loadtrack_name">Load track from file</string>
    <string name="savetrack_name">Save track to file</string>
    <string name="track2route_name">Convert track to route</string>
    <string name="exporttrack_name">Export track</string>
    <string name="loadwaypoints_name">Open waypoint set</string>
    <string name="managewaypoints_name">Waypoints</string>
    <string name="waypointproperties_name">Edit waypoint</string>
    <string name="waypointproject_name">Project new waypoint</string>
    <string name="advanced_name">Advanced properties</string>
    <string name="manageroutes_name">Routes</string>
    <string name="selectroute_name">Select route</string>
    <string name="loadroute_name">Load route from file</string>
    <string name="saveroute_name">Save route to file</string>
    <string name="routeproperties_name">Edit route</string>
    <string name="routedetails_name">Route details</string>
    <string name="manageareas_name">Areas</string>
    <string name="selectarea_name">Select area</string>
    <string name="loadarea_name">Load area from file</string>
    <string name="savearea_name">Save area to file</string>
    <string name="areaproperties_name">Edit area</string>
    <string name="areadetails_name">Area details</string>
    <string name="markericon_name">Select marker icon</string>
    <string name="pref_name">Borkozic settings</string>
    <string name="hsi_name">HSI</string>
    <string name="information_name">Information</string>
    <string name="mapinformation_name">Map information</string>
    <string name="coordinates_name">New coordinates</string>
    <string name="maplist_name">Maps</string>
    <string name="search_name">Search results</string>
    <string name="credits_name">Application credits</string>
    <string name="widget_name">Borkozic Location</string>
    <string name="version">Version: %s</string>
    <string name="homepage">Homepage: none yet, but see this - http://androzic.com/</string>
    <string name="send_me_bugs">If you run into bug which you want to get fixed or have any suggestion, don\'t hesitate to call me at GSM:0887601740.</string>
    <string name="search_hint">Enter address or name</string>
    <string name="msg_wait">Please wait&#8230;</string>
    <string name="msg_scansdcard">Scanning SD card</string>
    <string name="msg_badtrackimplementation">Please notice that performance will degrade on long tracks, be patient.</string>
    <string name="msg_initializingmaps">Initializing maps&#8230;</string>
    <string name="msg_initializingdata">Initializing data&#8230;</string>
    <string name="msg_initializingplugins">Initializing plugins&#8230;</string>
    <string name="msg_initializingview">Initializing view&#8230;</string>
    <string name="msg_paid">Donated version</string>
    <string name="msg_dedicated">Dedicated to our Creator and Savior</string>
    <string name="msg_nothing_found">Nothing was found. Please take into account that data is searched only if it is loaded in Borkozic, named locations are searched only if Internet connection is available.</string>
    <string name="msg_empty_route_list">No routes available. Use menu to create route or load it from file.</string>
    <string name="msg_needs_setup">You have to setup your session details</string>
    <string name="msg_needs_enable">Enable sharing to receive information about session users</string>
    <string name="msg_no_users">Looks like nobody shares their location with you</string>
    <string name="msg_empty_area_list">No areas available. Use menu to create area or load it from file.</string>
    <string name="msg_empty_track_list">No tracks available. Use menu to load track from file.</string>
    <string name="msg_newdatafolder">On popular request Borkozic now works with folders differently. You can freely select any folder for maps and data. Data folder is now unified for all data types: waypoints, tracks and routes. You have to copy your existing data files manually to the following autocreated folder: &#8216;%s&#8217;.</string>
    <string name="msg_expandcurrenttrack">If you have not cleared your current track for a long time this can significantly degrade performance. Proceed?</string>
    <string name="msg_clearcurrenttrack">This will clear all your moving history, are you sure?</string>
    <string name="msg_emptytracksegment">Selected track segment is empty, nothing to save</string>
    <string name="msg_cleaning">Cleaning&#8230;</string>
    <string name="msg_connectingtoserver">Connecting to server&#8230;</string>
    <string name="msg_loadingimagefile">Loading world map image file&#8230;</string>
    <string name="msg_loadingmapfile">Loading world map data file&#8230;</string>
    <string name="err_nosdcard">SD card unavailable</string>
    <string name="err_nofile">No such file</string>
    <string name="err_write">Unable to write file</string>
    <string name="err_noconnection">Network connection error</string>
    <string name="err_wrongformat">Wrong file format</string>
    <string name="err_read">Can not read file</string>
    <string name="err_shortroute">Route must contain at least two waypoints</string>
    <string name="err_shortarea">Area must contain at least 3 waypoints</string>
    <string name="err_nogps">No GPS device found</string>
    <string name="err_nomemory">Memory shortage detected, please report this to developer</string>
    <string name="err_notconfigured">Not configured</string>
    <string name="err_no_network_provider">No network location provider available</string>
    <string name="sat_stop">GPS disabled</string>
    <string name="sat_start">GPS enabled</string>
    <string name="sat_firstfix">GPS active</string>
    <string name="following_enabled">Following enabled</string>
    <string name="following_disabled">Following disabled</string>
    <string name="backQuit">Press Back again to quit</string>
    <string name="quitQuestion">Do you want to quit?</string>
    <string name="removeWaypointQuestion">Remove waypoint?</string>
    <string name="waypoint_in_area">Cannot delete: waypoint is part of an area</string>
    <string name="buttonEP">Emer</string>
    <string name="buttonNP">Norm</string>
    <string name="pref_procedures_key">pref_procedures</string>
    <string name="pref_procedures_title">Procedures</string>
    <string name="pref_procedures_emer_folder_title">Emergency procedures folder</string>
    <string name="pref_procedures_emer_folder_summary">Select folder with emergency procedure files</string>
    <string name="pref_procedures_emer_folder_dialog">Navigate to the folder containing emergency procedures (Emer.txt + procedure files) and tap SELECT FOLDER</string>
    <string name="pref_procedures_norm_folder_title">Normal procedures folder</string>
    <string name="pref_procedures_norm_folder_summary">Select folder with normal procedure files</string>
    <string name="pref_procedures_norm_folder_dialog">Navigate to the folder containing normal procedures (Norm.txt + procedure files) and tap SELECT FOLDER</string>
    <string name="buttonZeroLevel">Set0</string>
    <string name="buttonClear">SetN</string>
    <string name="buttonDR">DR</string>
    <string name="quit">Quit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="gotit">Got it</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="navigate">Navigate</string>
    <string name="generate">Generate</string>
    <string name="cancel">Cancel</string>
    <string name="warning">Warning</string>
    <string name="change">Change</string>
    <string name="more">More</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="show">Show</string>
    <string name="color">Color</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="altitude">Altitude</string>
    <string name="proximity">Proximity</string>
    <string name="accuracy">Accuracy</string>
    <string name="line_width">Line width</string>
    <string name="area_line_width">Area line width</string>
    <string name="area_color">Area Color</string>
    <string name="area_line_color">Area Line Color</string>
    <string name="area_transparency">Area transparency</string>
    <string name="filename">File name</string>
    <string name="coordformat">Coordinates format</string>
    <string name="direction">Select direction</string>
    <string name="from">From</string>
    <string name="never">never</string>
    <string name="distance">Distance</string>
    <string name="bearing">Bearing</string>
    <string name="degtrue">true</string>
    <string name="degmag">mag.</string>
    <string name="currentloc">Current location</string>
    <string name="satellites">Satellites</string>
    <string name="lastfix">Last fix</string>
    <string name="declination">Declination</string>
    <string name="provider">Provider</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="coarse">coarse</string>
    <string name="fine">fine</string>
    <string name="algorithm">Algorithm</string>
    <string name="alg_a">Cruise</string>
    <string name="alg_b">Flounce</string>
    <string name="update_almanac">Request almanac update</string>
    <string name="easting">Easting</string>
    <string name="northing">Northing</string>
    <string name="zone">Zone</string>
    <string name="hemisphere">Hemisphere</string>
    <string name="s">S</string>
    <string name="n">N</string>
    <string name="waypointset">Set</string>
    <string name="markercolor">Marker color</string>
    <string name="textcolor">Name color</string>
    <string name="icon">Icon</string>
    <string name="primary">Primary</string>
    <string name="advanced">Advanced</string>
    <string name="hdop">HDOP</string>
    <string name="vdop">VDOP</string>
    <string name="zero_level">Zero Level</string>
    <string name="from_date">Starting from</string>
    <string name="till_date">Ending at</string>
    <string name="format">Format</string>
    <string name="skip_single_locations">Skip single locations</string>
    <string name="badmaps">Map index error</string>
    <string name="nomaps">No maps found</string>
    <string name="nomaps_explained">Map folder &#8216;%s&#8217; is empty. Download and install world map (250KB)?</string>
    <string name="upto">Up to %.0f meters</string>
    <string name="pref_loc_title">Location</string>
    <string name="pref_loc_usenetwork_title">Use networks</string>
    <string name="pref_loc_usenetwork_summary">Mark to use location from networks if GPS location is not available</string>
    <string name="pref_loc_gpstimeout_title">GPS location timeout</string>
    <string name="pref_loc_gpstimeout_summary">Specify timeout in seconds of last GPS fix after which location will be determined by networks</string>
    <string name="pref_deadreckoning">pref_deadreckoning</string>
    <string name="pref_deadreckoning_title">Dead reckoning</string>
    <string name="pref_deadreckoning_summary">Use phone sensors to estimate position when GPS is lost</string>
    <string name="pref_tracking_mintime_title">Minimum time</string>
    <string name="pref_tracking_mintime_summary">Minimum time in milliseconds that should pass before another track point is acquired</string>
    <string name="pref_tracking_mindistance_title">Minimum distance</string>
    <string name="pref_tracking_mindistance_summary">Minimum distance in meters that should go before another track point is acquired</string>
</resources>